--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-tools": "^11.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "recharts": "2.1.9",
